[gd_scene load_steps=7 format=3 uid="uid://dh2q5tac5c423"]

[ext_resource type="Script" uid="uid://u2axghud8ax8" path="res://Scripts/ModeSelectScreen.gd" id="1_6fgj3"]
[ext_resource type="Texture2D" uid="uid://b3imofb6l4oxr" path="res://Assets/modeselection.jpg" id="1_8oe4o"]
[ext_resource type="Texture2D" uid="uid://rv21u66omgcx" path="res://Assets/playerbutton_removed.png" id="2_ak458"]
[ext_resource type="Texture2D" uid="uid://blq0vk1j1gfet" path="res://Assets/playerbuttonhover.png" id="3_vr38k"]
[ext_resource type="Texture2D" uid="uid://b2ie82mgh3hkk" path="res://Assets/playerbuttonpressed.png" id="4_56eig"]
[ext_resource type="FontFile" uid="uid://cwpc0d2b36u0l" path="res://Fonts/Komigo3D-Regular.ttf" id="6_56eig"]

[node name="ModeSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6fgj3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -689.0
offset_top = -388.0
offset_right = 719.0
offset_bottom = 380.0
texture = ExtResource("1_8oe4o")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UIContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -348.0
offset_right = 1858.0
offset_bottom = 3992.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = -700

[node name="OnePlayerButton" type="TextureButton" parent="UIContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("2_ak458")
texture_pressed = ExtResource("4_56eig")
texture_hover = ExtResource("3_vr38k")

[node name="Label" type="Label" parent="UIContainer/OnePlayerButton"]
layout_mode = 0
offset_left = 240.0
offset_top = 650.0
offset_right = 1779.0
offset_bottom = 1350.0
theme_override_fonts/font = ExtResource("6_56eig")
theme_override_font_sizes/font_size = 400
text = "1 Player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TwoPlayersButton" type="TextureButton" parent="UIContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_ak458")
texture_pressed = ExtResource("4_56eig")
texture_hover = ExtResource("3_vr38k")

[node name="Label" type="Label" parent="UIContainer/TwoPlayersButton"]
layout_mode = 0
offset_left = 155.0
offset_top = 624.0
offset_right = 1915.0
offset_bottom = 1353.0
theme_override_fonts/font = ExtResource("6_56eig")
theme_override_font_sizes/font_size = 400
text = "2 Players"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="UIContainer/OnePlayerButton" to="." method="_on_OnePlayerButton_pressed"]
[connection signal="pressed" from="UIContainer/TwoPlayersButton" to="." method="_on_TwoPlayerButton_pressed"]
